Changelog:
==========

2011-??-?? - 1.30.0

	Backwards-incompatible API changes - see SVN changelog for more details

2011-06-17 - 1.25.1

	Overscan compensation bug fixed

2011-06-16 - 1.25.0

	Overscan compensation feature added for MEncoder
	Return of the official OS X build, thanks for your patience!
	MEncoder no longer crashes when using more then 8 cores
	New build script for OS X that builds all dependencies (big thanks to Raptor399)
	French translation fixed

2011-06-14 - 1.24.0

	New icon on OS X
	Added Bulgarian and Brazilian Portuguese translation (thanks to jordito and gelo)
	Updated Polish, French, German and Portuguese translation
	tsMuxeR handles mov files
	Updated FFmpeg to r30172 from r28671
	Updated JRE auto-dl
	Forcing MEncoder via the TRANSCODE folder ignores tsMuxeR
	Fixed support for renderers including Panasonic TVs
	Improved RAR support
	Updated libraries for OS X build
	Lots of fixes to the OS X build process so now it works
	Support for multi-language VOBsub subtitles
	It's possible to remove hard drives from list if they are no longer connected (thanks, spots)

2011-05-26 - 1.23.0

	Fixed Windows service
	Windows service now starts automatically with the computer
	Sony Bravia Z5500 (and possibly others) work again
	Fixed PS3 not being detected for some users
	Support cellphone/smartphone (3gp) videos
	Windows service is uninstalled with program
	Detect Popcorn Hour and WDTV live more reliably
	English, Russian and Dutch language updates

2011-05-15 - 1.22.0

	Many file compatibility bugs fixed (particularly MKV, MP4 and DVD ISO)
	Help tab improved
	Improved alphabetical file sorting (old method is still there for those who liked it)
	Language fixes and updates
	Added custom profiles
	Added new renderers: Sony HX7, Bravia NX8, Panasonic Viera range
	Network traffic prioritised properly (thanks to bgm)
	48fps videos are now supported
	Various other fixes

2011-04-15 - 1.21.1

	Rollback MPlayer for Windows to fix critical subtitle bug