@@ -4,6 +4,11 @@ Changelog:
 2011-??-?? - 1.30.0
 
 	Backwards-incompatible API changes - see SVN changelog for more details
+	Updated binaries to revisions with fixes for ac3_fixed sound problems
+	Updated binaries to revisions with VOBsub support
+	Updated OSX FFmpeg from r30739 to r30919
+	Updated OSX Mencoder from r33606 to r33685
+	Updated OSX MPlayer from r33606 to r33685
 
 2011-06-17 - 1.25.1
 
